# Twitter_Haiku

./: Procfile  db.sqlite3  manage.py  profile.prof  pyproject.toml
SCHUY_django/: asgi.py  settings.py  urls.py  wsgi.py
twitter/: models.py  test_views.py  views.py
twitter/static/: custom.css
twitter/templates/: style.html
